// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList click finish task and close task 1`] = `
<div>
  <section
    class="card mt-5 shadow-sm"
  >
    <div
      class="card-header d-flex justify-content-between align-items-center"
    >
      <div>
        <h5>
          Task Title Test
        </h5>
        <h6
          class="card-subtitle text-muted"
        >
          Task Description Test
        </h6>
      </div>
      <div>
        <button
          class="btn btn-outline-danger btn-sm ml-2"
        >
          Delete
        </button>
      </div>
    </div>
    <ul
      class="list-group list-group-flush"
    >
      <li
        class="list-group-item d-flex justify-content-between align-items-center"
      >
        <div
          id="task-operation-item-description"
        >
          Description Operation Task Test
          <span
            class="badge badge-success badge-pill ml-2"
          >
             20m
          </span>
        </div>
      </li>
    </ul>
  </section>
</div>
`;

exports[`TaskList renders TaskList component for close task 1`] = `
<div>
  <section
    class="card mt-5 shadow-sm"
  >
    <div
      class="card-header d-flex justify-content-between align-items-center"
    >
      <div>
        <h5>
          Task Title Test
        </h5>
        <h6
          class="card-subtitle text-muted"
        >
          Task Description Test
        </h6>
      </div>
      <div>
        <button
          class="btn btn-outline-danger btn-sm ml-2"
        >
          Delete
        </button>
      </div>
    </div>
    <ul
      class="list-group list-group-flush"
    >
      <li
        class="list-group-item d-flex justify-content-between align-items-center"
      >
        <div
          id="task-operation-item-description"
        >
          Description Operation Task Test
          <span
            class="badge badge-success badge-pill ml-2"
          >
             20m
          </span>
        </div>
      </li>
    </ul>
  </section>
</div>
`;

exports[`TaskList renders TaskList component with data 1`] = `
<div>
  <section
    class="card mt-5 shadow-sm"
  >
    <div
      class="card-header d-flex justify-content-between align-items-center"
    >
      <div>
        <h5>
          Task Title Test
        </h5>
        <h6
          class="card-subtitle text-muted"
        >
          Task Description Test
        </h6>
      </div>
      <div>
        <button
          class="btn btn-dark btn-sm"
        >
          Finish
        </button>
        <button
          class="btn btn-outline-danger btn-sm ml-2"
        >
          Delete
        </button>
      </div>
    </div>
    <ul
      class="list-group list-group-flush"
    >
      <li
        class="list-group-item d-flex justify-content-between align-items-center"
      >
        <div
          id="task-operation-item-description"
        >
          Description Operation Task Test
          <span
            class="badge badge-success badge-pill ml-2"
          >
             20m
          </span>
        </div>
        <div>
          <button
            class="btn btn-outline-success btn-sm mr-2"
          >
            +15m
          </button>
          <button
            class="btn btn-outline-success btn-sm mr-2"
          >
            +1h
          </button>
          <button
            class="btn btn-outline-danger btn-sm"
          >
            Delete
          </button>
        </div>
      </li>
    </ul>
    <div
      class="card-body"
    >
      <form>
        <div
          class="input-group"
        >
          <label
            class="sr-only"
            for="operationDescription"
          />
          <input
            class="form-control"
            id="operationDescription"
            minlength="5"
            name="description"
            placeholder="Operation description"
            required=""
            type="text"
          />
          <div
            class="input-group-append"
          >
            <button
              class="btn btn-info"
              type="submit"
            >
              Add
            </button>
          </div>
        </div>
      </form>
    </div>
  </section>
</div>
`;
